@@ -1,3 +1,4 @@
+[2018-08-18 18:38:56 +0200]  gnome-themes-standard removed.                                             karasu      {2d9e8af3}
 [2018-08-17 17:20:16 +0200]  Fix packages.xml                                                           karasu      {0af03381}
 [2018-08-17 15:14:54 +0200]  Remove hunspell installation (temporary fix)                               karasu      {88d720c5}
 [2018-08-17 15:13:25 +0200]  Remove antergos-common-meta                                                karasu      {3f6d48c6}
